<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.qlnvkdv1.MainActivity" >

    <item
        android:id="@+id/action_ghetham"
        android:icon="@drawable/ic_ghetham"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/act_ghetham"/>
    <item
        android:id="@+id/action_bando"
        android:icon="@drawable/ic_map"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/act_bando"/>
    <item
        android:id="@+id/action_thongtin"
        android:icon="@drawable/ic_detail"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/act_thongtin"/>
    <item
        android:id="@+id/action_dathang"
        android:icon="@drawable/ic_plus2"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/act_dathang"/>

    <item
        android:id="@+id/actionKhaoSat"
        android:icon="@drawable/ic_plus2"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:visible="false"
        android:title="@string/act_dathang"/>

</menu>