<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White" >

    <LinearLayout
        android:id="@+id/layout_bl"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/kh_guiBL"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:background="@drawable/primary_layout_bg"
        android:orientation="horizontal" >

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/ldivider"
            android:dividerHeight="1dp"
            android:listSelector="@drawable/list_row_selector">
        </ListView>

        <TextView
            android:id="@id/android:empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
			android:padding="20dp"
			android:textColor="#FF0000"
			android:textSize="16sp"
			android:text="@string/text_no_data" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/kh_guiBL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="5dp"
        android:background="@drawable/primary_layout_bg"
        android:orientation="horizontal"
        android:padding="5dp" >

        <EditText
            android:id="@+id/txt_binhluan"
            style="@style/primary_edittext_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="3"
            android:background="@drawable/edittext_bg"
            android:hint="@string/hint_binhluan"
            android:singleLine="true"
            android:imeOptions="actionDone" />

        <Button
            android:id="@+id/btn_sendBL"
            style="@style/primary_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/primary_button_selector"
            android:src="@drawable/ic_send_32"
            android:text="@string/btn_gui"
            android:textSize="14sp" />
        
        <Button
            android:id="@+id/btn_close"
            style="@style/primary_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/primary_button_selector"
            android:src="@drawable/ic_send_32"
            android:text="@string/btn_dong"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>