<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_margin="10dp"
	android:background="@drawable/primary_layout_bg"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="2"
		android:padding="2dp">

		<fragment
			android:id="@+id/mapAddr"
			android:name="com.google.android.gms.maps.SupportMapFragment"
			android:layout_width="match_parent"
			android:layout_height="match_parent" />
	</LinearLayout>

	<!-- <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" 
		android:orientation="horizontal"> <LinearLayout android:layout_width="match_parent" 
		android:layout_height="wrap_content" android:layout_weight="1" android:orientation="horizontal"> 
		<TextView android:layout_width="match_parent" android:layout_height="match_parent" 
		android:layout_weight="4" android:gravity="left" android:text="@string/addr_dia_chiKH" 
		android:textSize="16sp" /> <EditText android:id="@+id/et_diachiKH" style="@style/primary_edittext_style" 
		android:layout_width="match_parent" android:layout_height="wrap_content" 
		android:layout_margin="8dp" android:layout_weight="1" android:background="@drawable/edittext_bg" 
		android:inputType="text" android:visibility="visible" /> </LinearLayout> 
		<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" 
		android:layout_weight="2" android:orientation="horizontal"> <Button android:id="@+id/btn_UpdateLocaltion" 
		style="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" 
		android:layout_margin="8dp" android:background="@drawable/primary_button_selector" 
		android:ellipsize="end" android:text="@string/addr_map_title" android:textColor="@color/white" 
		/> </LinearLayout> </LinearLayout> -->

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="10dp">

		<TextView
			android:id="@+id/tv_title_address"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_centerInParent="true"
			android:text="@string/addr_dia_chiKH"
			android:textSize="16sp"
			android:textStyle="bold" />

		<EditText
			android:id="@+id/et_diachiKH"
			style="@style/primary_edittext_style"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_toRightOf="@+id/tv_title_address"
			android:layout_toLeftOf="@+id/btn_UpdateLocaltion"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:layout_centerInParent="true"
			android:background="@drawable/edittext_bg"
			android:inputType="text"
			android:enabled="false" />

		<Button
			android:id="@+id/btn_UpdateLocaltion"			
			style="@style/primary_button_style_noCap"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="30dp"
			android:paddingRight="30dp"
			android:layout_alignParentRight="true"
			android:layout_centerInParent="true"
			android:background="@drawable/primary_button_selector"
			android:ellipsize="end"
			android:text="@string/addr_map_title"
			android:textColor="@color/white" />

	</RelativeLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_marginBottom="10dp">

		<Button
			android:id="@+id/btn_location_kh"
			style="@style/primary_button_style_noCap"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:background="@drawable/primary_button_selector"
			android:text="@string/location_kh"
			android:textColor="@color/white" />

		<Button
			android:id="@+id/btn_my_location"
			style="@style/primary_button_style_noCap"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:background="@drawable/primary_button_selector"
			android:text="@string/location_me"
			android:textColor="@color/white" />

		<Button
			android:id="@+id/btn_Thoat"
			style="@style/primary_button_style_noCap"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:background="@drawable/primary_button_selector"
			android:text="@string/addr_thoat"
			android:textColor="@color/white" />
	</LinearLayout>

</LinearLayout>